--- a/index.html
+++ b/index.html
@@ -91,46 +91,46 @@
             <h2 class="u-align-center u-custom-font u-text u-text-1">Свяжитесь с нами<br style="">
             </h2>
             <div class="u-form u-radius u-form-1">
-              <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form-1" style="padding: 10px;">
-                <div class="u-form-group u-form-name">
-                  <label for="name-74d5" class="u-custom-font u-label u-label-1">Имя и кличка питомца </label>
-                  <input type="text" placeholder="Введите имя и кличку питомца" id="name-74d5" name="name" class="u-border-none u-input u-input-rectangle" required="">
-                </div>
-                <div class="u-form-email u-form-group">
-                  <label for="email-74d5" class="u-custom-font u-label u-label-2">Номер телефона</label>
-                  <input type="email" placeholder="Введите номер телефона" id="email-74d5" name="email" class="u-border-none u-input u-input-rectangle" required="">
-                </div>
-                <div class="u-form-group u-form-select u-form-group-3">
-                  <label for="select-1f82" class="u-custom-font u-label u-label-3">Выберите услугу:</label>
-                  <div class="u-form-select-wrapper">
-                    <select id="select-1f82" name="select" class="u-border-none u-input u-input-rectangle">
-                      <option value="Уход за кожей и шерстью" data-calc="">Уход за кожей и шерстью</option>
-                      <option value="Маникюр и уход за лапами" data-calc="">Маникюр и уход за лапами</option>
-                      <option value="Очищение ушей и глаз" data-calc="">Очищение ушей и глаз</option>
-                      <option value="Аромотерапия" data-calc="">Аромотерапия</option>
-                      <option value="Грязевая ванна" data-calc="">Грязевая ванна</option>
-                      <option value="Гидротерапия и аквамассаж" data-calc="">Гидротерапия и аквамассаж</option>
-                    </select>
-                    <svg class="u-caret u-caret-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" style="fill:currentColor;" xml:space="preserve"><polygon class="st0" points="8,12 2,4 14,4 "></polygon></svg>
-                  </div>
-                </div>
-                <div class="u-form-date u-form-group u-form-group-4">
-                  <label for="date-6833" class="u-custom-font u-label u-label-4">Дата</label>
-                  <input type="text" placeholder="ММ/ДД/ГГГГ" id="date-6833" name="date" class="u-border-none u-input u-input-rectangle" required="" data-date-format="mm/dd/yyyy">
-                </div>
-                <div class="u-form-group u-form-time u-form-group-5">
-                  <label for="time-5619" class="u-custom-font u-label u-label-5">Время</label>
-                  <input type="time" id="time-5619" name="time" class="u-border-none u-input u-input-rectangle">
-                </div>
-                <div class="u-align-left u-form-group u-form-submit">
-                  <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-color-var u-custom-font u-radius u-btn-1">Отправить заявку</a>
-                  <input type="submit" value="submit" class="u-form-control-hidden">
-                </div>
-                <div class="u-form-send-message u-form-send-success">Спасибо! Ваше сообщение отправлено.</div>
-                <div class="u-form-send-error u-form-send-message">Отправка не удалась. Пожалуйста, исправьте ошибки и попробуйте еще раз.</div>
-                <input type="hidden" value="" name="recaptchaResponse">
-                <input type="hidden" name="formServices" value="c82be1be-2ed3-40de-4623-ad5422ef3662">
-              </form>
+<form action="https://formsubmit.co/work.work.work200wwww@gmail.com" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px;">
+    <input type="hidden" name="_subject" value="Новая заявка с сайта зоосалона!">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://ваш_сайт.ru/спасибо.html">
+    <div class="u-form-group u-form-name">
+        <label for="name-74d5" class="u-custom-font u-label u-label-1">Имя и кличка питомца</label>
+        <input type="text" placeholder="Введите имя и кличку питомца" id="name-74d5" name="name" class="u-border-none u-input u-input-rectangle" required="">
+    </div>
+    <div class="u-form-email u-form-group">
+        <label for="email-74d5" class="u-custom-font u-label u-label-2">Номер телефона</label>
+        <input type="text" placeholder="Введите номер телефона" id="email-74d5" name="phone" class="u-border-none u-input u-input-rectangle" required="">
+    </div>
+    <div class="u-form-group u-form-select u-form-group-3">
+        <label for="select-1f82" class="u-custom-font u-label u-label-3">Выберите услугу:</label>
+        <div class="u-form-select-wrapper">
+            <select id="select-1f82" name="service" class="u-border-none u-input u-input-rectangle">
+                <option value="Уход за кожей и шерстью">Уход за кожей и шерстью</option>
+                <option value="Маникюр и уход за лапами">Маникюр и уход за лапами</option>
+                <option value="Очищение ушей и глаз">Очищение ушей и глаз</option>
+                <option value="Аромотерапия">Аромотерапия</option>
+                <option value="Грязевая ванна">Грязевая ванна</option>
+                <option value="Гидротерапия и аквамассаж">Гидротерапия и аквамассаж</option>
+            </select>
+        </div>
+    </div>
+    <div class="u-form-date u-form-group u-form-group-4">
+        <label for="date-6833" class="u-custom-font u-label u-label-4">Дата</label>
+        <input type="text" placeholder="ММ/ДД/ГГГГ" id="date-6833" name="date" class="u-border-none u-input u-input-rectangle" required="" data-date-format="mm/dd/yyyy">
+    </div>
+    <div class="u-form-group u-form-time u-form-group-5">
+        <label for="time-5619" class="u-custom-font u-label u-label-5">Время</label>
+        <input type="time" id="time-5619" name="time" class="u-border-none u-input u-input-rectangle">
+    </div>
+    <div class="u-align-left u-form-group u-form-submit">
+        <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-color-var u-custom-font u-radius u-btn-1">Отправить заявку</a>
+        <input type="submit" value="submit" class="u-form-control-hidden">
+    </div>
+    <div class="u-form-send-message u-form-send-success">Спасибо! Ваше сообщение отправлено.</div>
+    <div class="u-form-send-error u-form-send-message">Отправка не удалась. Пожалуйста, исправьте ошибки и попробуйте еще раз.</div>
+</form>
             </div>
           </div>
         </div>
