--- a/О-нас.html
+++ b/О-нас.html
@@ -169,8 +169,7 @@
               <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-color-var u-custom-font u-radius u-btn-1">Отправить</a>
               <input type="submit" value="submit" class="u-form-control-hidden">
             </div>
-            <div class="u-form-send-message u-form-send-success"> Спасибо! Ваше сообщение отправлено. </div>
-            <div class="u-form-send-error u-form-send-message"> Отправка не удалась. Пожалуйста, исправьте ошибки и попробуйте еще раз. </div>
+            <div class="u-form-send-error u-form-send-message"> Ваш отзыв отправлен. Спасибо за оценку) </div>
             <input type="hidden" value="" name="recaptchaResponse">
             <input type="hidden" name="formServices" value="c82be1be-2ed3-40de-4623-ad5422ef3662">
           </form>
