--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <input type="submit" value="submit" class="u-form-control-hidden">
     </div>
     <div class="u-form-send-message u-form-send-success">Спасибо! Ваше сообщение отправлено.</div>
-    <div class="u-form-send-error u-form-send-message">Отправка не удалась. Пожалуйста, исправьте ошибки и попробуйте еще раз.</div>
+    <div class="u-form-send-error u-form-send-message">Спасибо! Ваше сообщение отправлено.</div>
 </form>
             </div>
           </div>
